--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Esports</title>
     <!-- Skripts -->
-    <script src="../Resources/Phone.js"></script>
+    <script src="Resources/Phone.js"></script>
     <!-- Styles for different screen size -->
-    <link rel="stylesheet" media="screen and (min-width: 140px) and (max-width: 1000px)" href="../Resources/Astralis-phone.css"/>
-    <link rel="stylesheet" media="screen and (min-width: 1001px) and (max-width: 10000px)" href="../Resources/Astralis-monitor.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 140px) and (max-width: 1000px)" href="Resources/Astralis-phone.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 1001px) and (max-width: 10000px)" href="Resources/Astralis-monitor.css"/>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
-    
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
   </head>
   <body>
 
@@ -47,18 +47,18 @@
         <!-- Images on the player card -->
         <div class="image">
           <img src="./PlayerImages/Astralis-wallpaper.jpg" id="background-img">
-  
+
           <img src="./PlayerImages/Dupreeh.jpg" id="player-img">
         </div>
-  
+
         <!-- Info box -->
         <div class="info-box">
-  
+
           <!-- Name -->
           <div id="player-name">
             <h1>Dupreeh</h1>
           </div>
-  
+
           <!-- Statistics -->
           <div class="stats">
             <!-- Kills -->
@@ -72,36 +72,36 @@
               <h3>deaths</h3>
             </div>
           </div>
-  
+
           <!-- Account button -->
           <div class="account-button">
             <button id="button">account</button>
           </div>
-  
+
           <!-- Additional player info -->
           <div class="info-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
           </div>
-  
+
         </div>
       </div>
-  
+
       <div class="card">
         <!-- Images on the player card -->
         <div class="image">
           <img src="./PlayerImages/Astralis-wallpaper.jpg" id="background-img">
-  
+
           <img src="./PlayerImages/Magisk.jpg" id="player-img">
         </div>
-  
+
         <!-- Info box -->
         <div class="info-box">
-  
+
           <!-- Name -->
           <div id="player-name">
             <h1>Magisk</h1>
           </div>
-  
+
           <!-- Statistics -->
           <div class="stats">
             <!-- Kills -->
@@ -115,36 +115,36 @@
               <h3>deaths</h3>
             </div>
           </div>
-  
+
           <!-- Account button -->
           <div class="account-button">
             <button id="button">account</button>
           </div>
-  
+
           <!-- Additional player info -->
           <div class="info-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
           </div>
-  
+
         </div>
       </div>
-  
+
       <div class="card">
         <!-- Images on the player card -->
         <div class="image">
           <img src="./PlayerImages/Astralis-wallpaper.jpg" id="background-img">
-  
+
           <img src="./PlayerImages/Gla1ve.jpg" id="player-img">
         </div>
-  
+
         <!-- Info box -->
         <div class="info-box">
-  
+
           <!-- Name -->
           <div id="player-name">
             <h1>Gla1ve</h1>
           </div>
-  
+
           <!-- Statistics -->
           <div class="stats">
             <!-- Kills -->
@@ -158,35 +158,35 @@
               <h3>deaths</h3>
             </div>
           </div>
-  
+
           <!-- Account button -->
           <div class="account-button">
             <button id="button">account</button>
           </div>
-  
+
           <!-- Additional player info -->
           <div class="info-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
           </div>
-  
+
         </div>
       </div>
       <div class="card">
         <!-- Images on the player card -->
         <div class="image">
           <img src="./PlayerImages/Astralis-wallpaper.jpg" id="background-img">
-  
+
           <img src="./PlayerImages/Device.jpg" id="player-img">
         </div>
-  
+
         <!-- Info box -->
         <div class="info-box">
-  
+
           <!-- Name -->
           <div id="player-name">
             <h1>Device</h1>
           </div>
-  
+
           <!-- Statistics -->
           <div class="stats">
             <!-- Kills -->
@@ -200,36 +200,36 @@
               <h3>deaths</h3>
             </div>
           </div>
-  
+
           <!-- Account button -->
           <div class="account-button">
             <button id="button">account</button>
           </div>
-  
+
           <!-- Additional player info -->
           <div class="info-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
           </div>
-  
+
         </div>
       </div>
-  
+
       <div class="card">
         <!-- Images on the player card -->
         <div class="image">
           <img src="./PlayerImages/Astralis-wallpaper.jpg" id="background-img">
-  
+
           <img src="./PlayerImages/Xyp9x.jpg" id="player-img">
         </div>
-  
+
         <!-- Info box -->
         <div class="info-box">
-  
+
           <!-- Name -->
           <div id="player-name">
             <h1>Xyp9x</h1>
           </div>
-  
+
           <!-- Statistics -->
           <div class="stats">
             <!-- Kills -->
@@ -243,17 +243,17 @@
               <h3>deaths</h3>
             </div>
           </div>
-  
+
           <!-- Account button -->
           <div class="account-button">
             <button id="button">account</button>
           </div>
-  
+
           <!-- Additional player info -->
           <div class="info-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
           </div>
-  
+
         </div>
       </div>
     </div>
