--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Esports</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="PlayerImages/favicon-16x16.png"> 
     <!-- Skripts -->
     <script src="Resources/Phone.js"></script>
     <!-- Styles for different screen size -->
